Added homepage html code

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
-!DOCTYPE html
-html lang=en
-  head
-    meta charset=UTF-8
-    meta name=viewport content=width=device-width, initial-scale=1.0
-    meta http-equiv=X-UA-Compatible content=ie=edge
-    titleHTML 5 Boilerplatetitle
-    link rel=stylesheet href=style.css
-  head
-  body
-    script src=index.jsscript
-  body
-html
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Initial case study website">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Evan Reinheimer's Webpage</title>
+        <link rel="stylesheet" href="style.css">
+        </head>
+    <body>
+        <div class="header">
+            <h1 class="title">The Collaboritive Site</h1>
+            <p class="subtitle">For Senior Capstone!</p>
+            <a class="clickedbutton" href="casestudychap9.html">Home</a>
+        </div>
+        <script src="script.js"></script>
+    </body>
+</html>
