--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Initial case study website">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Evan Reinheimer's Webpage</title>
+        <title>The Regulars - Login Page</title>
         <link rel="stylesheet" href="style.css">
         </head>
     <body>
         <div class="header">
             <h1 class="title">The Collaboritive Site</h1>
             <p class="subtitle">For Senior Capstone!</p>
-            <a class="clickedbutton" href="casestudychap9.html">Home</a>
+            <a class="clickedbutton" href="index.html">Home</a>
+			<a class="button" href="signup.html">Sign-Up</a>
+            <a class="button" href="login.html">Login</a>
         </div>
         <script src="script.js"></script>
     </body>
