Added our names to the index page so it isn't blank

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 			<a class="button" href="signup.html">Sign-Up</a>
             <a class="button" href="login.html">Login</a>
         </div>
+
+
+        <br><br><br><br><br><br><br><br><br><br>
+        <h3>Created by Evan Reinheimer, Andrew Evans, and Jenna Guffy</h3>
         <script src="script.js"></script>
     </body>
 </html>
