--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Signup">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Senior Capstone I</title>
+        <title>The Regulars - Signup Page</title>
         <link rel="stylesheet" href="style.css">
     </head>
     
@@ -14,7 +14,10 @@
             <p class="subtitle">For Senior Capstone</p>
             <a class="button" href="index.html">Home</a>
 			<a class="clickedbutton" href="signup.html">Sign-Up</a>
+            <a class="button" href="login.html">Login</a>
         </div>
+
+        <br><br><br><br><br><br><br><br><br>
         <div class='signUp'>
             <form method='post' onsubmit='return submitCheck()'>
                 <h1>SIGN UP</h1>
