--- a/prototype/reportresults.html
+++ b/prototype/reportresults.html
@@ -27,7 +27,6 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="options.html">Options</a>
     <a href="search.html">Search</a>
     <a href="newrecord.html">New Record</a>
     <a href="reports.html">Reports</a>
@@ -46,7 +45,7 @@
             <ul>
                 <li><strong>Date Range:</strong> 01/01/2024 - 12/31/2024</li>
                 <li><strong>Certification Status:</strong> Certified</li>
-                <li><strong>Aid Type:</strong> Federal Aid</li>
+                <li><strong>Aid Type:</strong> All</li>
             </ul>
         </div>
 
@@ -65,10 +64,10 @@
             </thead>
             <tbody>
                 <!-- Sample data for demonstration -->
-                <tr><td>1234567</td><td>Doe</td><td>John</td><td>johndoe@pennwest.edu</td><td>Certified</td><td>Federal Aid</td><td>$500</td></tr>
-                <tr><td>2345678</td><td>Smith</td><td>Jane</td><td>janesmith@pennwest.edu</td><td>Certified</td><td>GI Bill</td><td>$1,200</td></tr>
-                <tr><td>3456789</td><td>Johnson</td><td>Emily</td><td>emilyj@pennwest.edu</td><td>Certified</td><td>GI Bill</td><td>$300</td></tr>
-                <tr><td>4567890</td><td>Williams</td><td>David</td><td>davidw@pennwest.edu</td><td>Certified</td><td>Federal Aid</td><td>$1,500</td></tr>
+                <tr><td>1234567</td><td>Doe</td><td>John</td><td>johndoe@pennwest.edu</td><td>Certified</td><td>Post-9/11 GI Bill</td><td>3 Months, 6 days</td></tr>
+                <tr><td>2345678</td><td>Smith</td><td>Jane</td><td>janesmith@pennwest.edu</td><td>Certified</td><td>Post-9/11 GI Bill</td><td>5 Months, 21 days</td></tr>
+                <tr><td>3456789</td><td>Johnson</td><td>Emily</td><td>emilyj@pennwest.edu</td><td>Certified</td><td>VA Scholarship</td><td>3 Months, 6 days</td></tr>
+                <tr><td>4567890</td><td>Williams</td><td>David</td><td>davidw@pennwest.edu</td><td>Certified</td><td>Montgomery GI Bill</td><td>6 Months, 2 days</td></tr>
             </tbody>
         </table>
         
