--- a/prototype/reports.html
+++ b/prototype/reports.html
@@ -27,7 +27,6 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="options.html">Options</a>
     <a href="search.html">Search</a>
     <a href="newrecord.html">New Record</a>
     <a href="reports.html">Reports</a>
@@ -67,10 +66,10 @@
                 <label for="aid-type">Aid Type:</label>
                 <select id="aid-type" name="aid-type">
                     <option value="all">All</option>
-                    <option value="federal">Federal Aid</option>
-                    <option value="state">State Aid</option>
-                    <option value="institutional">Institutional Aid</option>
-                    <option value="private">Private Aid</option>
+                    <option value="911">Post-9/11 GI Bill</option>
+                    <option value="montgomery">Montgomery GI Bill</option>
+                    <option value="va_scholarship">VA Scholorship</option>
+                    
                 </select>
             </div>
 
