--- a/prototype/studentrecord.html
+++ b/prototype/studentrecord.html
@@ -15,11 +15,10 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="options.html">Options</a>
     <a href="search.html">Search</a>
     <a href="newrecord.html">New Record</a>
     <a href="#reports">Reports</a>
-    <a href="#templates">Email Templates</a>
+    <a href="#templates">Email</a>
     &ensp;&ensp;&ensp;&ensp;<a href="#login">Login</a>
     <a href="#logout">| Logout</a>
 </nav>
@@ -35,10 +34,10 @@
             <p><strong>Address:</strong> 123 Main St, Cityville, PA 12345</p>
             <p><strong>Phone Number:</strong> (123) 456-7890</p>
             <p><strong>Email:</strong> johndoe@pennwest.edu</p>
-            <p><strong>Balance:</strong> $1,250.00</p>
+            <p><strong>Balance:</strong> 6 Months, 4 days</p>
             <p><strong>Certification Status:</strong> Certified</p>
             <p><strong>Aid Date:</strong> 01/15/2024</p>
-            <p><strong>Aid Type:</strong> GI Bill</p>
+            <p><strong>Aid Type:</strong> Post-9/11 GI Bill</p>
             <p><strong>Certification Date:</strong> 01/20/2024</p>
         </div>
         
