--- a/prototype/email.html
+++ b/prototype/email.html
@@ -15,7 +15,6 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="options.html">Options</a>
     <a href="search.html">Search</a>
     <a href="newrecord.html">New Record</a>
     <a href="email.html">Email</a>
@@ -73,7 +72,8 @@
                     <!-- Additional scheduling options as needed -->
                 </select>
             </div>
-            
+            <!-- Save Template Button -->
+            <button type="submit" class="option-button">Save Template</button>
             <!-- Send Email Button -->
             <button type="submit" class="option-button">Send Email</button>
         </form>
