--- a/prototype/login.html
+++ b/prototype/login.html
@@ -18,7 +18,7 @@
     <a href="#search">Search</a>
     <a href="#new-record">New Record</a>
     <a href="#reports">Reports</a>
-    <a href="#templates">Email Templates</a>
+    <a href="#templates">Email</a>
     &ensp;&ensp;&ensp;&ensp;<a href="#login">Login</a>
     <a href="#logout">| Logout</a>
 </nav>
