--- a/prototype/newrecord.html
+++ b/prototype/newrecord.html
@@ -15,11 +15,10 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="options.html">Options</a>
     <a href="search.html">Search</a>
     <a href="newrecord.html">New Record</a>
     <a href="#reports">Reports</a>
-    <a href="#templates">Email Templates</a>
+    <a href="#templates">Email</a>
     &ensp;&ensp;&ensp;&ensp;<a href="#login">Login</a>
     <a href="#logout">| Logout</a>
 </nav>
