--- a/prototype/search.html
+++ b/prototype/search.html
@@ -16,10 +16,10 @@
 <nav>
     <a href="index.html">Home</a>
     <a href="search.html">Search</a>
-    <a href="#new-record">New Record</a>
-    <a href="#reports">Reports</a>
-    <a href="#templates">Email</a>
-    &ensp;&ensp;&ensp;&ensp;<a href="#login">Login</a>
+    <a href="newrecord.html">New Record</a>
+    <a href="email.html">Email</a>
+    <a href="reports.html">Reports</a>
+    &ensp;&ensp;&ensp;&ensp;<a href="login.html">Login</a>
     <a href="#logout">| Logout</a>
 </nav>
 
