--- a/prototype/email.html
+++ b/prototype/email.html
@@ -18,8 +18,8 @@
     <a href="search.html">Search</a>
     <a href="newrecord.html">New Record</a>
     <a href="email.html">Email</a>
-    <a href="#reports">Reports</a>
-    &ensp;&ensp;&ensp;&ensp;<a href="#login">Login</a>
+    <a href="reports.html">Reports</a>
+    &ensp;&ensp;&ensp;&ensp;<a href="login.html">Login</a>
     <a href="#logout">| Logout</a>
 </nav>
 
