--- a/prototype/login.html
+++ b/prototype/login.html
@@ -14,12 +14,12 @@
 </header>
 
 <nav>
-    <a href="#home">Home</a>
-    <a href="#search">Search</a>
-    <a href="#new-record">New Record</a>
-    <a href="#reports">Reports</a>
-    <a href="#templates">Email</a>
-    &ensp;&ensp;&ensp;&ensp;<a href="#login">Login</a>
+    <a href="index.html">Home</a>
+    <a href="search.html">Search</a>
+    <a href="newrecord.html">New Record</a>
+    <a href="email.html">Email</a>
+    <a href="reports.html">Reports</a>
+    &ensp;&ensp;&ensp;&ensp;<a href="login.html">Login</a>
     <a href="#logout">| Logout</a>
 </nav>
 
