--- a/Project Prototype/index.html
+++ b/Project Prototype/index.html
@@ -13,6 +13,7 @@
     <span>PennWest Financial Aid Veteran’s Database</span>
 </header>
 
+<!---<?php include 'navbar.php'; ?> -->
 <nav>
     <a href="index.html">Home</a>
     <a href="search.html">Search</a>
