--- a/Project Prototype/email.html
+++ b/Project Prototype/email.html
@@ -15,7 +15,7 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="search.html">Search</a>
+    <a href="search.php">Search</a>
     <a href="newrecord.html">New Record</a>
     <a href="email.html">Email</a>
     <a href="reports.html">Reports</a>
