--- a/Project Prototype/index.html
+++ b/Project Prototype/index.html
@@ -16,7 +16,7 @@
 <!---<?php include 'navbar.php'; ?> -->
 <nav>
     <a href="index.html">Home</a>
-    <a href="search.html">Search</a>
+    <a href="search.php">Search</a>
     <a href="newrecord.html">New Record</a>
     <a href="email.html">Email</a>
     <a href="reports.html">Reports</a>
@@ -28,7 +28,7 @@
     <div class="options-container">
         <h2>Select an Action</h2>
         <div class="option-buttons">
-            <a href="#search" class="option-button">Search</a>
+            <a href="search.php" class="option-button">Search</a>
             <a href="#add-new-record" class="option-button">Add New Record</a>
             <a href="#run-report" class="option-button">Run a Report</a>
             <a href="#send-batch-email" class="option-button">Send Batch Email</a>
